--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -40,11 +40,19 @@
         @Localizer["Products:"]
       </h2>
       <div class="test_choice_box_link_container">
+        <div class="link_header">
+            <span class="link_title_header">Product Name</span>
+            <span class="link_branch_header">Branch</span>
+            <span class="link_author_header">Commit Author</span>
+            <span class="link_date_header">Date of Creation</span>
+          </div>
         @foreach (var item in Model.UniqueProducts)
         {
           <a class="link" asp-page="/features/features" asp-route-productName="@item.ProductName" asp-route-id="@item.Id"
             asp-route-featureId="@item.Id">
             <h1 class="link_title">@item.ProductName</h1>
+            <h2 class="link_branch">@item.BranchName</h2>
+            <h2 class="link_author">@item.CommitAuthor</h2>
             <h2 class="link_date">@item.GetFormattedDateTime()</h2>
           </a>
         }
