--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="~/css/navbar-queries.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
@@ -98,13 +98,13 @@ private IHtmlContent RenderTree(Dictionary<string, object> tree, string parentId
                 <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
                 <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
                 <div class="search-container">
-                    <i class="fa fa-search search-icon"></i>
+                    <i class="fa-solid fa-magnifying-glass search-icon"></i>
                     <input class="navbar_search" type="text" id="navbar_search" name="query"
                         placeholder="@Localizer["Features, Scenarios"]..." />
                 </div>
                 </form>
                 <a href="https://github.com/Nonsultant/specgurka" target="_blank" class="repo_link">
-                    <i class="fa fa-github"></i>
+                    <i class="fa-brands fa-git-alt"></i>
                     <div class="repo_text" id="repoText">
                         <p>Nonsultant/specgurka</p>
                         <div>
