--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -18,7 +18,7 @@
         <h1 class="title_box_title">SpecGurka</h1>
       </div>
       <a href="https://github.com/Nonsultant/specgurka" target="_blank" class="repo_link">
-                    <i class="fa fa-github"></i>
+                <i class="fa-brands fa-git-alt"></i>
                     <div class="repo_text" id="repoText">
                         <p>Nonsultant/specgurka</p>
                         <div>
