--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -35,7 +35,7 @@
       <div class="hero_text_box">
         <h2 class="hero_text_box_title">@Localizer["BDD test interpretation made easy"]</h2>
         <p class="hero_text_box_text">@Localizer["SpecGurka is a tool for visualizing test results in a living and continous way by integrating directly in your testing pipelines."]</p>
-        <a href="https://github.com/Nonsultant/specgurka">Documentation</a>
+        <a href="https://github.com/Nonsultant/specgurka">@Localizer["Documentation"]</a>
     </div>
     <div class="test_choice_box">
       <div class="test_choice_box_header">
@@ -51,10 +51,10 @@
       </div>
       <div class="test_choice_box_link_container">
         <div class="link_header">
-            <span class="link_title_header">Product Name</span>
-            <span class="link_branch_header">Branch</span>
-            <span class="link_author_header">Commit Author</span>
-            <span class="link_date_header">Date of Creation</span>
+            <span class="link_title_header">@Localizer["Product Name"]</span>
+            <span class="link_branch_header">@Localizer["Branch"]</span>
+            <span class="link_author_header">@Localizer["Commit Author"]</span>
+            <span class="link_date_header">@Localizer["Date of Creation"]</span>
           </div>
         @foreach (var item in Model.UniqueProducts)
         {
