--- a/source/VizGurka/Pages/Search/Search.cshtml
+++ b/source/VizGurka/Pages/Search/Search.cshtml
@@ -1,6 +1,6 @@
 @page "/search/{productName}/{query?}"
-@model VizGurka.Pages.Search.SearchModel
 @using Microsoft.Extensions.Localization
+@model SearchModel
 @inject IStringLocalizer<SearchModel> Localizer
 @{
     Layout = "~/Pages/Shared/_SearchLayout.cshtml";
@@ -10,15 +10,15 @@
 
 <section class="navbar">
     <nav>
-        <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo" />
+        <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo"/>
         <a asp-page="/features/features" asp-route-productName="@Model.ProductName" asp-route-id="@Model.FirstFeatureId"
-            asp-route-featureId="@Model.FirstFeatureId">@Localizer["Home"]</a>
+           asp-route-featureId="@Model.FirstFeatureId">@Localizer["Home"]</a>
         <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
             <div class="search-container">
-                <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
+                <input type="hidden" id="productName" name="productName" value="@Model.ProductName"/>
                 <i class="fa fa-search search-icon"></i>
                 <input class="navbar_search" type="text" id="navbar_search" name="query"
-                    placeholder="@Localizer["Features, Scenarios"]..." />
+                       placeholder="@Localizer["Features, Scenarios"]..."/>
             </div>
         </form>
     </nav>
@@ -33,132 +33,23 @@
         else
         {
             <h1 class="search_title">@Localizer["Search results for:"] "@Model.Query"</h1>
-            <a href="#features" class="search_category">@Localizer["Features"] <span
-                    class="count">@Model.FeatureResultCount</span></a>
-            <a href="#scenarios" class="search_category">@Localizer["Scenarios"] <span
-                    class="count">@Model.ScenarioResultCount</span></a>
-            <a href="#rules" class="search_category">@Localizer["Rules"] <span
-                    class="count">@Model.RuleResultCount</span></a>
-            <a href="#tags" class="search_category">@Localizer["Tags"]
-                <span class="count">@Model.TagsResultCount</span></a>
         }
     </section>
     <section class="search_display">
-        @if (Model.FeatureSearchResults.Any() || Model.ScenarioSearchResults.Any() || 
-        Model.RuleSearchResults.Any() || Model.TagSearchResults.Any())
+        @if (Model.SearchResults.Any())
         {
-            @if (Model.FeatureSearchResults.Any())
-            {
-            <div class="dropdown">
-                <div class="dropdown-header arrow-trigger">
-                    <h1 id="features" class="search_category">@Localizer["Egenskaper"] <span
-                            class="count">@Model.FeatureResultCount</span>
-                    </h1>
-                    <span class="arrow right"></span>
-                </div>
-                <div class="dropdown-content">
-                    <ul>
-                        @foreach (var feature in Model.FeatureSearchResults)
-                        {
-                            <li>
-                                
-                                <a asp-page="/features/features" asp-route-productName="@Model.ProductName"
-                                    asp-route-id="@feature.Id" asp-route-featureId="@feature.Id">
-                                    <img src="~/icons/@(IconHelper.GetStatusIcon(feature.Status)).svg" alt="status icon" />
-                                    @feature.Name
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                </div>
-            </div>
-            }
-            @if (Model.ScenarioSearchResults.Any())
-            {
-            <div class="dropdown">
-                <div class="dropdown-header arrow-trigger">
-                    <h1 id="scenarios" class="search_category">@Localizer["Scenarios"] <span
-                            class="count">@Model.ScenarioResultCount</span></h1>
-                    <span class="arrow right"></span>
-                </div>
-                <div class="dropdown-content">
-                    <ul>
-                        @foreach (var scenario in Model.ScenarioSearchResults)
-                        {
-                            <li>
-                                @{
-                                    var decodedScenarioName = System.Net.WebUtility.UrlDecode(scenario.Scenario!.Name);
-                                }
-                                <a class="scenario_title"
-                                    href="@Html.Raw($"/features/{Model.ProductName}/{Model.Id}/{scenario.FeatureId}/#{decodedScenarioName}-scenario")">
-                                    @scenario.Scenario!.Name
-                                </a>
-                            </li>
-                        }
-                    </ul>
-                </div>
-            </div>
-            }
-            @if (Model.RuleSearchResults.Any())
-            {
-            <div class="dropdown">
-                <div class="dropdown-header arrow-trigger">
-                    <h1 id="rules" class="search_category">@Localizer["Rules"] <span
-                            class="count">@Model.RuleResultCount</span></h1>
-                    <span class="arrow right"></span>
-                </div>
-                <div class="dropdown-content">
-                    <ul>
-                        @foreach (var ruleWithFeature in Model.RuleSearchResults)
-                        {
-                            <li>
-                                @{
-                                    var decodedRuleName = System.Net.WebUtility.UrlDecode(ruleWithFeature.Rule!.Name);
-                                }
-                                <a class="rule_title"
-                                    href="@Html.Raw($"/features/{Model.ProductName}/{ruleWithFeature.FeatureId}/{ruleWithFeature.FeatureId}/#{decodedRuleName}-rule")">
-                                    @ruleWithFeature.Rule!.Name
-                                </a>
-                                <div class="steps"> @Model.MarkdownStringToHtml(ruleWithFeature.Description ?? "")</div>
-                            </li>
-                        }
-                    </ul>
-                </div>
-            </div>
-            }
-            @if (Model.TagSearchResults.Any())
-            {
-            <div class="dropdown">
-                <div class="dropdown-header arrow-trigger">
-                    <h1 id="tags" class="search_category">@Localizer["Tags"] <span
-                            class="count">@Model.TagsResultCount</span></h1>
-                    <span class="arrow right"></span>
-                </div>
-                <div class="dropdown-content">
-                    <ul>
-                        @foreach (var tagWithFeature in Model.TagSearchResults)
-                        {
-                            <li>
-                                @{
-                                    var decodedTagName = System.Net.WebUtility.UrlDecode(tagWithFeature.Tag);
-                                }
-                                <a class="rule_title"
-                                    href="@Html.Raw($"/features/{Model.ProductName}/{tagWithFeature.FeatureId}/{tagWithFeature.FeatureId}/#{decodedTagName}-tag")">
-                                    @tagWithFeature.Tag
-                                </a>
-                                <div class="steps">
-                                    <strong>Feature: @tagWithFeature.FeatureName</strong>
-                                    @if (!string.IsNullOrEmpty(tagWithFeature.ScenarioName))
-                                    {
-                                        <span><br />Scenario: @tagWithFeature.ScenarioName</span>
-                                    }
-                                </div>
-                            </li>
-                        }
-                    </ul>
-                </div>
-            </div>
-            }
+            <ul>
+                @foreach (var result in Model.SearchResults)
+                {
+                    <li>
+                        <h3>@result.Title</h3>
+                        <p>@result.Content</p>
+                        <p><strong>FeatureId:</strong>@result.FeatureId</p>
+                        <p><strong>Source Field:</strong> @result.SourceField</p>
+                        <p><strong>Relevance Score:</strong> @result.Score</p>
+                    </li>
+                }
+            </ul>
         }
         else
         {
